3 of 4 exercises done M3W1D2

--- a/m3-w1d2-css-selectors-and-layouts-exercises/index-in_a-row.html
+++ b/m3-w1d2-css-selectors-and-layouts-exercises/index-in_a-row.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Fun with Blocks</title>  
-</head>
+    <head>
+        <title>Fun with Blocks</title> 
+        <link rel="stylesheet" href=".\fun-with-blocks-in-a-row.css">
+    </head>
+
 <body>
   <div id="box_0" class="box even">
     0
