finished css pyramid

--- a/m3-w1d2-css-selectors-and-layouts-exercises/index-in-a-pyramid.html
+++ b/m3-w1d2-css-selectors-and-layouts-exercises/index-in-a-pyramid.html
@@ -5,36 +5,44 @@
   <link rel="stylesheet" href=".\fun-with-blocks-in-a-pyramid.css">
 </head>
 
-<body>
-  <div id="box_0" class="box even">
-    0
+<body> 
+  <div id="row_1">
+    <div id="box_0" class="box even">
+      0
+    </div>
   </div>
-  <div id="box_1" class="box odd">
-    1
+  <div id="row_2">
+    <div id="box_1" class="box odd">
+      1
+    </div>
+    <div id="box_2" class="box even">
+      2
+    </div>
   </div>
-  <div id="box_2" class="box even">
-    2
+  <div id="row_3">
+    <div id="box_3" class="box odd">
+      3
+    </div>
+    <div id="box_4" class="box even">
+      4
+    </div>
+    <div id="box_5" class="box odd">
+      5
+    </div>
   </div>
-  <div id="box_3" class="box odd">
-    3
-  </div>
-  <div id="box_4" class="box even">
-    4
-  </div>
-  <div id="box_5" class="box odd">
-    5
-  </div>
-  <div id="box_6" class="box even">
-    6
-  </div>
-  <div id="box_7" class="box odd">
-    7
-  </div>
-  <div id="box_8" class="box even">
-    8
-  </div>
-  <div id="box_9" class="box odd">
-    9
+  <div id="row_4">
+    <div id="box_6" class="box even">
+      6
+    </div>
+    <div id="box_7" class="box odd">
+      7
+    </div>
+    <div id="box_8" class="box even">
+      8
+    </div>
+    <div id="box_9" class="box odd">
+      9
+    </div>
   </div>
 </body>
 </html>
